# tempa

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: conversion.rs  duration.rs  error.rs  example.rs  frame_index.rs  frame_rate.rs  frame_stepper.rs  lib.rs  macros.rs  scalar.rs  time.rs  time_range.rs
src/common/: conversion.rs  macros_algebra.rs  macros_bytemuck.rs  macros_numeric.rs  mod.rs
src/duration/: impl_core.rs  impl_numeric.rs  impl_ops.rs  mod.rs  tests.rs  traits.rs  types.rs
src/frame_index/: impl_core.rs  impl_numeric.rs  impl_ops.rs  mod.rs  tests.rs  types.rs
src/frame_rate/: impl_core.rs  impl_numeric.rs  impl_ops.rs  macros.rs  mod.rs  tests.rs  types.rs
src/frame_stepper/: impl_core.rs  mod.rs  tests.rs  types.rs
src/time/: impl_core.rs  impl_numeric.rs  impl_ops.rs  mod.rs  tests.rs  types.rs
src/time_range/: impl_core.rs  impl_numeric.rs  mod.rs  tests.rs  traits.rs  types.rs
