[package]
name = "tempa"
version = "0.1.1"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/tempa"
description = "A no_std temporal system for animation and simulation, providing time, duration, time ranges, frame rates, and deterministic frame-index stepping."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["num-traits/std", "approx/std"]


[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
approx = { version = "0.5.1", default-features = false }
pastey = "0.2.3"
