[package]
name = "tempa"
version = "0.1.2"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/tempa"
description = "A no_std temporal system for animation and simulation, providing time, duration, time ranges, frame rates, and deterministic frame-index stepping."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["rinia/std", "approx/std", "zerocopy?/std"]

bytemuck = ["dep:bytemuck"]
zerocopy = ["dep:zerocopy"]

_all_optional = ["bytemuck", "zerocopy"]

[dependencies]
rinia = { version = "0.0.5", default-features = false }

approx = { version = "0.5.1", default-features = false }

pastey = "0.2.3"

bytemuck = { version = "1.25.0", optional = true, default-features = false }

zerocopy = { version = "0.8.52", optional = true, default-features = false, features = [
    "derive",
] }
