[package]
name = "tempa"
version = "0.1.9"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/tempa"
description = "A no_std temporal system for animation and simulation, providing time, duration, time ranges, frame rates, and deterministic frame-index stepping."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["rinia/std", "thiserror/std", "sakka?/std", "zerocopy?/std"]

bytemuck = ["dep:bytemuck"]
zerocopy = ["dep:zerocopy"]

_all_optional = ["sakka", "bytemuck", "zerocopy"]

[dependencies]
rinia = { version = "0.0.12", default-features = false }

thiserror = { version = "2.0.18", default-features = false }

pastey = "0.2.3"

sakka = { version = "0.0.18", optional = true, default-features = false, features = [
    "derive",
] }
bytemuck = { version = "1.25.1", optional = true, default-features = false }
zerocopy = { version = "0.8.54", optional = true, default-features = false, features = [
    "derive",
] }
